Cleanup and fix failing batch tests (#2838)
* Cleanup and fix failing batch tests

* Fix up MQTT tests alongside HTTP. Working with QoS 0 and QoS 1.

* Show exception before dumping logs

* Fix a bunch of compiler warnings, and issues hidden by those.

* Re-try HTTP send in case of failures

* Need to sync the connect call

* Add an additional receive timeout by default

* Replace another message test with the resilient one.

* Fix handling the "non-auth" case, and an NPE.

* Get more information when testing

* Limit client ID of MQTT device

* Finer grained sleep when receiving

* Properly log exception

* More helpful content, helps reading the logs

* No need to continue in the case of failure

* Await the close operation on vertx contexts.

This change waits until the vertx contexts are actually closed.
Otherwise it might happen that the context is still open, when the next
test runs, and might consume messages from the next test.

* Remove the noise in the log

* Prevent a possible NPE

* Print full stack trace

* Lockless destruction of list

* Show received messages

* Add more logging to vertx instance closing

* Log HTTP message drop off result in debug

* Log message when aborting

* Make closing of resource more robust

* Wait for IoT deployments to be gone

* Use copy and print out number of clients

* record more information

* Use a custom result handler, not ignoring errors

* Relax send timeouts a big, seems the broker is slower sometimes

* Print out send delay into log

* request QoS for evaluating the http result

* Switch to file based device registry